--- a/index.html
+++ b/index.html
@@ -6,26 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" type="text/css" href="font/fontello.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/6c6e51dfe8.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
   <script src="main.js"></script> 
 </head>
 <body>
   <header>
     <img class="comp" src="img/computer.png" alt="Computer" height="60" width="60"><h1 class="logo">KŚ</h1>
-    <input type="checkbox" id="nav-toggle" class="nav-toggle">
-    <a href="#" class="scrollup"></a>
     <nav class="navbar">
       <ul>
+        <li><a href="#">Home</a></li>
         <li><a href="#about-me">About me</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <label for="nav-toggle" class="nav-toggle-label">
-      <span></span>
-    </label>
+
   </header>
   <div class="content">
     <h2>Kajetan Światły<br><br>Full-stack Developer</h2>
@@ -84,11 +81,16 @@
         <div class="contact-left">
           <div class="contact-left-content">
             <span class="text">Have you got a question? I'm here to help you! Send me a message and I will answer you as soon as possible!</span>
-            <div class="text address">
+            <div class="address">
               <strong>Poland, Wrocław</strong>
               Grunwaldzka 23/3 50-356 <br>
               666-666-666<br>
               kajetan.swiatly@gmail.com
+            </div>
+            <div>
+                <a href="https://www.linkedin.com/in/kajetan-%C5%9Bwiat%C5%82y-770bab170/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/kswiatly" target="_blank"><i class="fab fa-github-square" ></i></a>
+                <a href="https://www.facebook.com/people/Kajtek-%C5%9Awiat%C5%82y/100013398577209" target="_blank"><i class="fab fa-facebook-square"></i></a>
             </div>
           </div>
         </div>
@@ -100,11 +102,10 @@
             <div><input type="text" placeholder="Topic"></div>
             <label>Message:</label>
             <textarea class="message" rows="3" ></textarea>
-            <button type="submit" class="btn" style="visibility: visible; animation-name: fadeInRight;">Send message</button>
+            <button type="submit" class="btn">Send message</button>
           </div>
         </div>
       </div>
-      <h5>Prawa autorskie &copy; 2019 Kajetan Światły</h5>
     </footer>
 </body>
 </html>
